# backend/src/routes/index.ts
@@ -1,12 +1,14 @@
-import { FastifyPluginAsync, type FastifyInstance } from 'fastify'
+import { FastifyInstance } from 'fastify'
 import { authRoutes } from './auth'
 import { medicationRoutes } from './medications'
 import { notificationRoutes } from './notifications'
 import { whatsappWebhookRoutes } from './webhooks/whatsapp'
+import { healthRoutes } from './health'
 
 export default async function routes(app: FastifyInstance) {
-  await app.register(authRoutes, { prefix: '/auth' })
-  await app.register(medicationRoutes, { prefix: '/medications' })
-  await app.register(notificationRoutes, { prefix: '/notifications' })
-  await app.register(whatsappWebhookRoutes, { prefix: '/webhooks/whatsapp' })
+  app.register(authRoutes, { prefix: '/auth' })
+  app.register(medicationRoutes, { prefix: '/medications' })
+  app.register(notificationRoutes, { prefix: '/notifications' })
+  app.register(whatsappWebhookRoutes, { prefix: '/webhooks/whatsapp' })
+  app.register(healthRoutes, { prefix: '/health' })
 } 
